--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: <DOCKER_HUB_USERNAME>/backend:latest
+          image: siddocker467/backend:latest
           ports:
             - containerPort: 5000
           env:
