--- a/k8s/k8s-manifests.yaml
+++ b/k8s/k8s-manifests.yaml
@@ -43,7 +43,25 @@ spec:
           claimName: postgres-pvc
 
 ---
+#postgres pv
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-pv
+  namespace: three-tier-app
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
+  hostPath:
+    path: /mnt/data/postgres
+
+---
 # PostgreSQL PVC
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -55,6 +73,8 @@ spec:
   resources:
     requests:
       storage: 5Gi
+  storageClassName: manual
+
 
 ---
 # PostgreSQL Service
