--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
 FROM nginx:alpine
 
 # Copy the custom nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy the frontend files
-COPY index.html /usr/share/nginx/html/
+COPY ./index.html /usr/share/nginx/html/
 
 EXPOSE 80
 
