--- a/k8s/k8s-manifests.yaml
+++ b/k8s/k8s-manifests.yaml
@@ -54,7 +54,7 @@ spec:
     storage: 5Gi
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Recycle
   storageClassName: manual
   hostPath:
     path: /mnt/data/postgres
