--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,9 +8,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    # Proxy requests to the backend API
+    # Proxy requests to the backend API with more robust configuration
     location /api/ {
-        proxy_pass http://backend:3000/api/;
+        proxy_pass http://backend.three-tier-app.svc.cluster.local:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
