--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,17 @@
 server {
     listen 80;
     server_name localhost;
-    
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    
+
     # Proxy requests to the backend API
     location /api/ {
-        proxy_pass http://backend:3000/api/;
+        proxy_pass http://backend.three-tier-app.svc.cluster.local:3000/;
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,7 +21,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
-    
+
     # Health check endpoint
     location /health {
         access_log off;
