--- a/k8s/k8s-manifests.yaml
+++ b/k8s/k8s-manifests.yaml
@@ -113,6 +113,8 @@ spec:
         ports:
         - containerPort: 3000
         env:
+        - name: DB_HOST
+          value: "postgres.three-tier-app.svc.cluster.local"
         - name: PORT
           value: "3000"
         - name: DB_HOST
