--- a/k8s/k8s-manifests.yaml
+++ b/k8s/k8s-manifests.yaml
@@ -114,7 +114,7 @@ spec:
         - containerPort: 3000
         env:
         - name: DB_HOST
-          value: "postgres.three-tier-app.svc.cluster.local"
+          value: "postgres.three-tier-app.svc.cluster.local:5432"
         - name: PORT
           value: "3000"
         - name: DB_HOST
